--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,3 +1,14 @@
 nav {
+  position: fixed;
+  width: 100%;
+  background: #222
+}
 
+nav > ul {
+  display: inline-block;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 15px;
+  padding-right: 15px;
+  color: #fff
 }
