--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -10,10 +10,9 @@ nav {
 
 nav > ul {
   display: inline-block;
-  padding-top: 5px;
-  padding-bottom: 5px;
   padding-left: 15px;
   padding-right: 15px;
+  vertical-align: middle;
   color: #fff;
 }
 
