--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -30,6 +30,7 @@ main {
 .article-tag-important {
   padding-left: 5px;
   padding-right: 5px;
+  vertical-align: middle;
   background: orange;
   color: #f00;
   border-radius: 5px;
