--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -27,6 +27,16 @@ main {
   margin-top: 75px;
 }
 
+.article-tag-news {
+  padding-left: 5px;
+  padding-right: 5px;
+  verticle-align: middle;
+  background: lightBlue;
+  color: blue;
+  border-radius: 5px;
+  font-size: 75%;
+}
+
 .article-tag-important {
   padding-left: 5px;
   padding-right: 5px;
