--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -31,8 +31,8 @@ main {
   padding-left: 5px;
   padding-right: 5px;
   verticle-align: middle;
-  background: lightBlue;
-  color: blue;
+  background: blue;
+  color: lightBlue;
   border-radius: 5px;
   font-size: 75%;
 }
