--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -82,3 +82,10 @@ main {
   color: lime;
   font-weight: bold;
 }
+
+.profile-avatar {
+  width: 50px;
+  height: 50px;
+  background: #333;
+  border-radius: 50%;
+}
